CC024 - (FFIE-179, FFIE-180)
Modificado BD:
Dominio -> TipoDominio: 90 - Código: 17
VRegistrarAvanceSemanalNew
VRegistrarPersonalObra

--- a/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/dialog-registro-programacion/dialog-registro-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/dialog-registro-programacion/dialog-registro-programacion.component.html
@@ -2,17 +2,17 @@
     <button mat-button mat-dialog-close class="modal--btn-cerrar" [mat-dialog-close]="null">
       <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar">
     </button>
-    
+
     <div class="text-center">
       <h1 class="title-menu--h1">
-        Registrar programación del personal {{ dataContrato.contrato.llaveMen }}
+        <span *ngIf="dataContrato.verDetalle === false">Registrar</span><span *ngIf="dataContrato.verDetalle === true">Detalle</span> programación del personal {{ dataContrato.contrato.llaveMen }}
       </h1>
-    
+
       <div class="d-flex text-center justify-center">
         <p class="p">
             {{ dataContrato.contrato.departamento }}
         </p>
-      
+
         <p class="p ml-2em">
           {{ dataContrato.contrato.municipio }}
         </p>
@@ -33,7 +33,9 @@
       <mat-dialog-content>
         <app-tabla-registro-semanas [contratoConstruccionId]="dataContrato.contrato.contratoConstruccionId"
                                     [registroSemanas]="registroSemanas"
-                                    (seRealizoPeticion)="seRealizoPeticion( $event )">
+                                    [verDetalle]="dataContrato.verDetalle"
+                                    (seRealizoPeticion)="seRealizoPeticion( $event )
+                                    ">
         </app-tabla-registro-semanas>
       </mat-dialog-content>
     </div>
