--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
@@ -8,14 +8,14 @@
     <h1 class="title-menu--h1">
      {{ contrato['estadoVerificacionConstruccionCodigo'] === undefined ? 'Gestionar' : 'Ver Detalle/Editar' }}  requisitos para inicio contrato {{ contrato.numeroContrato }} fase 2 - Construcción
     </h1>
-  
+
     <section class="container margin-1em color-primary" *ngIf="contrato.contratacion">
       <div class="text-center section-flex">
         <p class="mr-1em">Fecha de aprobacion de póliza: <b> {{ contrato.contratoPoliza[ 0 ].fechaAprobacion !== undefined ? ( contrato.contratoPoliza[ 0 ].fechaAprobacion | date: 'dd/MM/yyyy' ) : '' }} </b></p>
         <p>Proyectos asociados: <b> {{ contrato.contratacion.contratacionProyecto.length }} </b></p>
       </div>
     </section>
-  
+
     <section *ngIf="contrato.contratacion">
       <div class="text-center">
           <p class="info-container">
@@ -24,9 +24,9 @@
             <span class="info-text completo">Completo</span>
           </p>
       </div>
-  
-      
-  
+
+
+
       <mat-accordion>
         <mat-expansion-panel
           class="expansion-style"
@@ -34,15 +34,15 @@
         >
           <mat-expansion-panel-header class="expansion-style--header w-45">
             <mat-panel-title class="expansion-style--title {{contratacion['estadoSemaforo']}}" >
-              
+
               {{ contratacion.proyecto.llaveMen }} - {{ contratacion.proyecto[ 'institucionEducativa' ].nombre }} - {{ contratacion.proyecto[ 'sede' ].nombre }}
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div align="left">
             <mat-card class="border">
               <mat-card-content>
-                <p><b>Nombre del contratista</b>: {{ contrato.contratacion.contratista.nombre }}</p>
-                <p><b>Número de identificación (NIT/RUT)</b>: {{ contrato.contratacion.contratista.numeroIdentificacion }}</p>
+                <p><b>Nombre del contratista</b>: {{ contrato.contratacion?.contratista?.nombre }}</p>
+                <p><b>Número de identificación (NIT/RUT)</b>: {{ contrato.contratacion?.contratista?.numeroIdentificacion }}</p>
                 <p><b>Tipo de intervención</b>: {{ contratacion.proyecto.tipoIntervencionCodigo }}</p>
                 <p><b>Departamento</b>: {{ contratacion.proyecto.departamento }}</p>
                 <p><b>Municipio</b>: {{ contratacion.proyecto.municipio }}</p>
@@ -50,68 +50,68 @@
               </mat-card-content>
             </mat-card>
           </div>
-  
+
           <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="contratacion.fasePreConstruccionNotMapped">
             <mat-expansion-panel-header class="expansion-style--header">
-              <mat-panel-title class="expansion-style--title 
-                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoDiagnostico == true ? 
-                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoDiagnostico == false ? 
+              <mat-panel-title class="expansion-style--title
+                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoDiagnostico == true ?
+                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoDiagnostico == false ?
                         'en-proceso' : 'sin-diligenciar' : 'sin-diligenciar' }}">
                 Diagnóstico
               </mat-panel-title>
             </mat-expansion-panel-header>
-  
-            <app-diagnostico 
-                            [contratoConstruccion]="contratacion.proyecto.contratoConstruccion[0]" 
-                            [proyecto]="contratacion.proyecto" 
+
+            <app-diagnostico
+                            [contratoConstruccion]="contratacion.proyecto.contratoConstruccion[0]"
+                            [proyecto]="contratacion.proyecto"
                             (diagnostico)="getDiagnostico( i, $event )"
                             >
             </app-diagnostico>
-  
+
           </mat-expansion-panel>
-  
+
           <mat-accordion>
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title 
-                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoPlanesProgramas == true ? 
-                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoPlanesProgramas == false ? 
+                <mat-panel-title class="expansion-style--title
+                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoPlanesProgramas == true ?
+                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoPlanesProgramas == false ?
                         'en-proceso' : 'sin-diligenciar' : 'sin-diligenciar' }}">
                   Planes y Programas
                 </mat-panel-title>
               </mat-expansion-panel-header>
-    
-              <app-planes-programas 
-                                    [planesProgramas]="contratacion.proyecto.contratoConstruccion[0]" 
-                                    [proyecto]="contratacion.proyecto" 
+
+              <app-planes-programas
+                                    [planesProgramas]="contratacion.proyecto.contratoConstruccion[0]"
+                                    [proyecto]="contratacion.proyecto"
                                     (planesProgramasForm)="getPlanesProgramas( i, $event )"
                                     >
               </app-planes-programas>
-    
+
             </mat-expansion-panel>
-            
+
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title 
-                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoManejoAnticipo == true ? 
-                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoManejoAnticipo == false ? 
+                <mat-panel-title class="expansion-style--title
+                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoManejoAnticipo == true ?
+                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoManejoAnticipo == false ?
                         'en-proceso' : 'sin-diligenciar' : 'sin-diligenciar' }}">
                   Manejo de anticipo
                 </mat-panel-title>
               </mat-expansion-panel-header>
-    
+
               <app-manejo-anticipo [contratoConstruccion]="contratacion.proyecto.contratoConstruccion[0]" (manejoAnticipo)="getAnticipo( i, $event )"></app-manejo-anticipo>
-    
+
             </mat-expansion-panel>
-    
+
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" 
+                <mat-panel-title class="expansion-style--title"
                                                                 [ngClass]="contratacion['estadoSemaforoPerfiles']">
                   Hojas de vida del contratista de obra
                 </mat-panel-title>
               </mat-expansion-panel-header>
-    
+
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length > 0">
                 <app-hoja-vida-contratista  [perfilProyecto]="contratacion.proyecto.contratoConstruccion[0].construccionPerfil"
                                             [contratoId]="contrato.contratoId"
@@ -130,19 +130,19 @@
                                             (actualizarRegistros)="getContrato()">
                 </app-hoja-vida-contratista>
               </section>
-              
+
             </mat-expansion-panel>
-    
+
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title 
-                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoProgramacionObra == true ? 
-                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoProgramacionObra == false ? 
+                <mat-panel-title class="expansion-style--title
+                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoProgramacionObra == true ?
+                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoProgramacionObra == false ?
                         'en-proceso' : 'sin-diligenciar' : 'sin-diligenciar' }}">
                   Programación de obra
                 </mat-panel-title>
               </mat-expansion-panel-header>
-    
+
               <div class="d-flex mt-2em text-center" style="justify-content: center;" >
                 <label class="label-left">
                   Fecha Inicio ejecución de obra:
@@ -153,8 +153,8 @@
                       matInput
                       [matDatepicker]="fechaInicioObra"
                       [(ngModel)]="contratacion.proyecto.contratoConstruccion[0].fechaInicioObra"
-                      
-                      
+
+
                       placeholder="DD/MM/AAAA"
                       required
                       readonly
@@ -163,19 +163,19 @@
                       (dateChange)="changeFechaInicioObra(contratacion.proyecto.contratoConstruccion[0].contratoConstruccionId,contratacion.proyecto.proyectoId, fechaInicioObra, i)"
                       [disabled]="contratacion.proyecto.contratoConstruccion[0].archivoCargueIdProgramacionObra !== undefined"
                     />
-  
+
                     <input
                       matInput
                       [matDatepicker]="fechaInicioObra"
                       [min]="minDate"
-                      
+
                       placeholder="DD/MM/AAAA"
                       required
                       readonly
                       (click)="fechaInicioObra.open()"
                       *ngIf="contratacion.proyecto.contratoConstruccion.length == 0"
                       (dateChange)="changeFechaInicioObra(0, contratacion.proyecto.proyectoId, fechaInicioObra, i)"
-                      
+
                     />
                     <mat-datepicker  #fechaInicioObra></mat-datepicker>
                   </mat-form-field>
@@ -188,25 +188,25 @@
                   >
                     <img class="mr-bottom-1" src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
                   </button>
-                  
+
                 </div>
               </div>
-  
+
               <div class="d-flex mt-2em text-center" style="justify-content: center;">
-  
+
                 <p class="mr-1em" style="margin-right: 2em;">
-  
+
                   <!-- Fecha Inicio: <b>{{ contratacion.proyecto.contratoConstruccion[0].fechaInicioObra | date: 'dd/MM/yyyy' }}</b></p>   -->
-                  <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
+                  <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>
                   <p class="mr-1em" style="margin-right: 2em;">Duración en semanas de la fase: <b>{{ contratacion.proyecto['plazoEnSemanas'] | number : '1.1-1' }}</b></p>
                   <p class="mr-1em" style="margin-right: 2em;">Valor total de la fase: <b> {{ contratacion.proyecto[ 'valorFaseConstruccion' ] | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
-    
+
               </div>
-    
+
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length > 0">
-                <app-programacion-obra-flujo-inversion 
-                                                      [esFlujoInversion]="false" 
-                                                      [contratoConstruccionId]="contratacion.proyecto.contratoConstruccion[0].contratoConstruccionId" 
+                <app-programacion-obra-flujo-inversion
+                                                      [esFlujoInversion]="false"
+                                                      [contratoConstruccionId]="contratacion.proyecto.contratoConstruccion[0].contratoConstruccionId"
                                                       [observacionDevolucionProgramacionObra]="contratacion.proyecto.contratoConstruccion[0].observacionDevolucionProgramacionObra"
                                                       [archivoCargueIdProgramacionObra]="contratacion.proyecto.contratoConstruccion.length > 0 ? contratacion.proyecto.contratoConstruccion[0].archivoCargueIdProgramacionObra : undefined"
                                                       [proyectoId]="contratacion.proyecto.proyectoId"
@@ -215,10 +215,10 @@
                                                       (terminoCarga)="getCargaMasiva( $event )"
                                                       (realizoObservacion)="getCargaMasiva( $event )"></app-programacion-obra-flujo-inversion>
               </section>
-    
+
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length === 0">
-                <app-programacion-obra-flujo-inversion 
-                                                      [esFlujoInversion]="false" 
+                <app-programacion-obra-flujo-inversion
+                                                      [esFlujoInversion]="false"
                                                       [contratoConstruccionId]="0"
                                                       [proyectoId]="contratacion.proyecto.proyectoId"
                                                       [archivoCargueIdProgramacionObra]="contratacion.proyecto.contratoConstruccion.length > 0 ? contratacion.proyecto.contratoConstruccion[0].archivoCargueIdProgramacionObra : undefined"
@@ -226,30 +226,30 @@
                                                       (terminoCarga)="getCargaMasiva( $event )"
                                                       (realizoObservacion)="getCargaMasiva( $event )"></app-programacion-obra-flujo-inversion>
               </section>
-    
+
             </mat-expansion-panel>
-    
+
             <mat-expansion-panel class="expansion-style sub-expansion">
               <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title 
-                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoFlujoInversion == true ? 
-                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoFlujoInversion == false ? 
+                <mat-panel-title class="expansion-style--title
+                {{ contratacion.proyecto.contratoConstruccion[0] ? contratacion.proyecto.contratoConstruccion[0].registroCompletoFlujoInversion == true ?
+                  'completo' : contratacion.proyecto.contratoConstruccion[0].registroCompletoFlujoInversion == false ?
                         'en-proceso' : 'sin-diligenciar' : 'sin-diligenciar' }}">
                   Flujo de inversión de recursos
                 </mat-panel-title>
               </mat-expansion-panel-header>
-    
+
               <div class="d-flex mt-2em text-center" style="justify-content: center;">
                 <p class="mr-1em" style="margin-right: 2em;">
-                  Fecha Inicio: <b>{{ contratacion.proyecto.fechaInicioEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
-                  <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
+                  Fecha Inicio: <b>{{ contratacion.proyecto.fechaInicioEtapaObra | date: 'dd/MM/yyyy' }}</b></p>
+                  <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>
                   <p class="mr-1em" style="margin-right: 2em;">Duración en semanas de la fase: <b>{{ contratacion.proyecto['plazoEnSemanas'] | number : '1.1-1' }}</b></p>
                   <p class="mr-1em" style="margin-right: 2em;">Valor total de la fase: <b> {{ contratacion.proyecto[ 'valorFaseConstruccion' ] | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
-    
+
               </div>
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length > 0">
-                <app-programacion-obra-flujo-inversion  
-                                                        [esFlujoInversion]="true" 
+                <app-programacion-obra-flujo-inversion
+                                                        [esFlujoInversion]="true"
                                                         [contratoConstruccionId]="contratacion.proyecto.contratoConstruccion[0].contratoConstruccionId"
                                                         [contrato]="contrato"
                                                         [proyectoId]="contratacion.proyecto.proyectoId"
@@ -263,21 +263,21 @@
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length === 0">
                 <app-programacion-obra-flujo-inversion  [esFlujoInversion]="true"
                                                         [contratoConstruccionId]="0"
-                                                        [contrato]="contrato" 
+                                                        [contrato]="contrato"
                                                         [proyectoId]="contratacion.proyecto.proyectoId"
                                                         [archivoCargueIdFlujoInversion]="contratacion.proyecto.contratoConstruccion.length > 0 ? contratacion.proyecto.contratoConstruccion[0].archivoCargueIdFlujoInversion : undefined"
                                                         [archivoCargueIdProgramacionObra]="contratacion.proyecto.contratoConstruccion.length > 0 ? contratacion.proyecto.contratoConstruccion[0].archivoCargueIdProgramacionObra : undefined"
                                                         (terminoCarga)="getCargaMasiva( $event )"
                                                         (realizoObservacion)="getCargaMasiva( $event )">
-                </app-programacion-obra-flujo-inversion> 
+                </app-programacion-obra-flujo-inversion>
               </section>
-    
+
             </mat-expansion-panel>
           </mat-accordion>
-  
+
         </mat-expansion-panel>
       </mat-accordion>
     </section>
-  
+
   </div>
 </section>
